--- a/app/src/main/res/layout/play_fragment.xml
+++ b/app/src/main/res/layout/play_fragment.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".fragments.PlayFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:minHeight="800dp">
+        >
 
         <ImageView
             android:id="@+id/imgQuestion"
             android:layout_width="wrap_content"
-            android:layout_height="220dp"
+            android:layout_height="190dp"
             android:padding="8dp"
             android:src="@drawable/android_category_simple"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,10 +26,10 @@
             android:id="@+id/lblQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
+            android:padding="8dp"
+            android:layout_marginTop="25dp"
             android:text="TextView"
-            android:textSize="16dp"
+            android:textSize="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgQuestion" />
 
@@ -36,7 +37,6 @@
             android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="@+id/lblQuestion"
             app:layout_constraintTop_toBottomOf="@+id/lblQuestion">
@@ -47,11 +47,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:padding="8dp"
                 android:text="" />
 
             <RadioButton
                 android:id="@+id/rdAnswer2"
                 android:layout_width="wrap_content"
+                android:padding="8dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="" />
@@ -59,6 +61,7 @@
             <RadioButton
                 android:id="@+id/rdAnswer3"
                 android:layout_width="wrap_content"
+                android:padding="8dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="" />
@@ -66,6 +69,7 @@
             <RadioButton
                 android:id="@+id/rdAnswer4"
                 android:layout_width="wrap_content"
+                android:padding="8dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="" />
