--- a/app/src/main/res/xml/settings_fragment.xml
+++ b/app/src/main/res/xml/settings_fragment.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:icon="@drawable/ic_event_note_black_24dp"
+        android:key="confirmation"
         android:title="@string/settings_showDialog"/>
     <SeekBarPreference
         android:defaultValue="5"
         android:max="10"
+        android:key="questions"
         app:min="2"
         app:showSeekBarValue="true"
         android:icon="@drawable/ic_event_note_black_24dp"
